# AutoPlanAgent-CodeX

./: .gitignore  README.md  STABILITY_REPORT.md  analysis_report.md  main.py  pyproject.toml  test.sh  utils.py
api/: __init__.py  main.py
api/routers/: health.py  runs.py
autoplan_agent/: __init__.py  config.py  executor.py  ids.py  logging_.py  workflow.py
autoplan_agent/llm/: __init__.py  model_factory.py  prompts.py  runtime.py
autoplan_agent/llm/prompts/: confirm_classifier.j2  plan.j2  repair.j2  understand.j2
autoplan_agent/schemas/: __init__.py  api.py  artifacts.py  plan.py  understanding.py
autoplan_agent/storage/: __init__.py  checkpoint.py  run_store.py
autoplan_agent/tools/: __init__.py  builtins.py  registry.py
autoplan_agent/tools/dataframe/: __init__.py  cleaning.py  eda.py  io.py
autoplan_agent/tools/mining/: __init__.py  anomaly.py  trend.py
autoplan_agent/tools/mysql/: __init__.py  client.py  guard.py  tools.py
autoplan_agent/tools/report/: __init__.py  pdf.py  render.py
autoplan_agent/tools/stats/: __init__.py  correlation.py  descriptive.py  hypothesis.py
cli/: __init__.py  main.py
docker/: Dockerfile  docker-compose.yml
scripts/: check_db_status.py  check_periods.py  fix_missing_table.py  load_pv_financials_akshare.py  regenerate_report.py  verify_stability.py
templates/business_rules/: examples.yaml
templates/plans/: default.yaml
templates/report/: report.html.j2  report.md.j2
tests/: conftest.py  test_checkpoint_resume.py  test_planner_output.py  test_report_render.py  test_sql_guard.py
(+3 files in other folders)
