[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoplan-agent"
version = "0.1.0"
description = "LangChain/LangGraph based autonomous planning data analysis agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "jinja2>=3.1.3",
  "kaleido>=0.2.1",
  "langchain-community>=0.2.0",
  "langchain-core>=0.2.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.0.40",
  "langgraph-checkpoint-sqlite>=3.0.3",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "plotly>=5.20.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "pymysql>=1.1.0",
  "pyyaml>=6.0.1",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "scikit-learn>=1.4.0",
  "scipy>=1.12.0",
  "seaborn>=0.13.0",
  "sqlalchemy>=2.0.0",
  "sqlglot>=25.0.0",
  "statsmodels>=0.14.0",
  "typer>=0.9.0",
  "uvicorn>=0.23.0",
  "weasyprint>=61.0",
  "pytest>=8.0.0",
  "langchain-qwq>=0.1.0",
  "akshare", 
  "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
qwq = ["langchain-qwq>=0.1.0"]
data = ["akshare", "openpyxl"]

[project.scripts]
autoplan-agent = "cli.main:app"
